Unity tests part 2